Reader: Fix grav/excerpt site recs overlap in Manage (#14977)

--- a/client/blocks/reader-recommended-sites/style.scss
+++ b/client/blocks/reader-recommended-sites/style.scss
@@ -58,7 +58,6 @@ $reader-related-card-v2-breakpoint-small: "( max-width: 535px )";
 	flex-direction: column;
 	list-style-type: none;
 	margin-top: -40px;
-	min-width: 0;
 
 	@media #{$reader-related-card-v2-breakpoint-medium} {
 		flex-direction: row;
